ProductionBackUp/src/objects/LIC__c.object
<CustomObject>
    <fields>
        <fullName>LICNewProposalExistingCustomer__c</fullName>
        <label>LICNewProposalExistingCustomer</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LIC_Proposal_Tracking__c</fullName>
        <defaultValue>&apos;Pradeep&apos;</defaultValue>
        <label>LIC Proposal Tracking</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LIC_Request__c</fullName>
        <defaultValue>&apos;Pradeep&apos;</defaultValue>
        <label>LIC Request</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Proposal</label>
        <referenceTo>Proposal__c</referenceTo>
        <relationshipLabel>LICs</relationshipLabel>
        <relationshipName>LICs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>LIC</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LIC_Request__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>LIC Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LICs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>